--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 </head>
 <body>
     <div class="container">
-        <h1><i class="fab fa-tiktok"></i> أداة تحويل مستخدمين تيك توك</h1>
+        <h1><i class="fab fa-tiktok"></i> أداة تحويل مستخدمين تيك توك تمت البرمجة بوساطة أحمد خان</h1>
         
         <div class="instructions">
             <h3><i class="fas fa-info-circle"></i> كيفية الاستخدام:</h3>
